[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/UI/Menu.gd" type="Script" id=1]
[ext_resource path="res://src/UI/PixelTheme.tres" type="Theme" id=2]
[ext_resource path="res://src/UI/img/Background_space.png" type="Texture" id=3]

[node name="Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 362.0
margin_top = 166.0
margin_right = 662.0
margin_bottom = 434.0
rect_min_size = Vector2( 300, 95 )
custom_constants/separation = 13
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 37.0
text = "Alone Spaceship"
align = 1
valign = 1

[node name="StartBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 300.0
margin_bottom = 114.0
rect_min_size = Vector2( 300, 64 )
text = "Start"

[node name="OptionsBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 127.0
margin_right = 300.0
margin_bottom = 191.0
rect_min_size = Vector2( 300, 64 )
text = "Option"

[node name="QuitBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 204.0
margin_right = 300.0
margin_bottom = 268.0
rect_min_size = Vector2( 300, 64 )
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/StartBtn" to="." method="_on_StartBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/OptionsBtn" to="." method="_on_OptionsBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
